# Hotel-Booking

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  tempCodeRunnerFile.py
app/agents/: conversation_agent.py  structuring_agent.py
app/database/: connection.py  models.py  repository.py
app/services/: email_service.py
frontend/: chat_app.py
